@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(drivers/sqlite/dbd_sqlite.c)
 AM_MAINTAINER_MODE
 
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE(libdbi-drivers, 1.0-pre2)
 AM_CONFIG_HEADER(config.h)
 AC_LIBTOOL_WIN32_DLL
@@ -238,6 +239,7 @@ AC_OUTPUT([
 	drivers/freetds/Makefile
 	drivers/ingres/Makefile
 	tests/Makefile
+	m4/Makefile
 	])
 dnl doc/Makefile
 
